--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{title}}</title>
+    <title>подстановка</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
-    <h1><span>{{h1}}</span></h1>
+    <h1><span>Миссия Колонизация Марса</span></h1>
   </div>
 </nav>
-<h4>{{h4}}</h4>
+<h4>И на Марсе будут яблони цвести!</h4>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+{% block content%} {% endblock%}
 </body>
 </html>
